fixed the video landing page and sticky header. Added padding for the content to be visible beneath the sticky header

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,14 @@
+*{
+    /* border: 1px solid gold; */
+}
+
+html{
+    margin: 0;
+}
+
 body{
     margin: 0;
+    overflow-x: hidden;
 }
 
 .container{
@@ -14,13 +23,18 @@ body{
     top: 0;
     width: 100%;
     z-index: 99;
-    height: 120px;
+    height: 80px;
+    background-color: black;
+    color: white;
+}
+
+.selected{
+    color: red;
 }
 
 a{
     text-decoration: none;
-    margin: auto 15px;  
-    color: black; 
+    color: white; 
     padding: 6px; 
     font-size: 20px;
 }
@@ -28,10 +42,14 @@ a:hover{
     color: red;
 }
 
+.spacer{
+    padding-top: 100px;
+}
+
 #logo{
     width: 140px;
-    height: 75px;
-    border: 1px solid black;
+    height: 40px;
+    border: 1px solid white;
     margin: auto 25px;
 }
 
@@ -40,26 +58,15 @@ a:hover{
 }
 
 .headerLink{
-    display: inline;
-    margin: 30px 15px;
+    display: inline-block;
+    margin: auto 20px;
     font-size: 20px;
     letter-spacing: 4px;
-    color: white;
     font-weight: 600;
 }
 
 #mainVideo{
     width: 100%;
-}
-
-#button{
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    position: absolute;
-    top: 800px;
-    left: 800px;
-
 }
 
 #footer{
@@ -69,4 +76,46 @@ a:hover{
     width: 100%;
     background-color: blue;
     height: 100px;
+}
+
+.slide-in-top {
+	-webkit-animation: slide-in-top .4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: slide-in-top .4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+/* ----------------------------------------------
+ * Generated by Animista on 2019-11-28 12:25:21
+ * Licensed under FreeBSD License.
+ * See http://animista.net/license for more info. 
+ * w: http://animista.net, t: @cssanimista
+ * ---------------------------------------------- */
+
+/**
+ * ----------------------------------------
+ * animation slide-in-top
+ * ----------------------------------------
+ */
+@-webkit-keyframes slide-in-top {
+  0% {
+    -webkit-transform: translateY(-1000px);
+            transform: translateY(-1000px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes slide-in-top {
+  0% {
+    -webkit-transform: translateY(-1000px);
+            transform: translateY(-1000px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+  }
 }
